# fim

./: .gitignore  CMakeLists.txt  readme.md
include/: chunk.h  cst.h  cuda.h  fit.h  grid.h  helper.h  kernel.h  occ.h  solver.h  stl.h  utils.h
include/utils/: assert.h  check.h  clipper.h  cuda.h  cuda_utils.h  plt.h
src/: chunk.cu  cst.cc  fit.cc  grid.cc  kernel.cu  main.cc  occ.cc  solver.cc  stl.cu  utils.cc
test/: test_stl.cc
tool/: gen.cmake  run.bas
